--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header, section, footer, aside, nav, article, figure, figcaption {
 body {
     color: #666666;
     background-color: #F9F8F6;
-    background-image: url("images/latar.jpg");
+    background-image: url("Images/latar.jpg");
     background-position: center;
     font-family: Georgia, Times, serif;
     line-height: 1.4em;
@@ -21,7 +21,7 @@ body {
 
 header {
     height: 160px;
-    background-image: url(images/header1.png);
+    background-image: url(Images/header1.png);
 }
 
 h1 {
