--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 header {
     height: 160px;
-    background-image: url(Images/Header1.png);
+    background-image: url("Images/Header1.png");
 }
 
 h1 {
